# auton

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  comms.js  config.json  dev.fastmcp.json  fastmcp.json  package-lock.json  package.json  pyproject.toml  slack-manifest.json  tsconfig.json
.claude/: settings.json
.claude/agents/: cleanup-specialist.md
.claude/plans/: adaptive-prancing-steele.md  autonomous_agent_upgrade_cbb849e9.plan.md  cheeky-mixing-dijkstra.md  fastmcp_ai_agent_v2_8f5a00b4.plan.md  full_autonomous_agent_1457d879.plan.md  full_autonomous_agent_749b7106.plan.md  zany-munching-noodle.md
.claude/rules/: neon-api-guidelines.mdc  neon-python-sdk.mdc  neon-toolkit.mdc
.github/: REPO_ABOUT.md
docs/: README.md  api-reference.md  architecture.md  getting-started.md  mcp.md  types.md
docs/core/: agent-loop.md  ai-client.md  delegation.md  executor.md
docs/protocols/: coordination.md  monitoring.md  optimization.md  permissions.md  security.md  task-assignment.md  task-decomposition.md  trust-reputation.md  verification.md
scripts/: setup_google.py  setup_slack.py
src/: agent.js  factory.ts  index.ts
src/auton/: __init__.py  app.py  config.py
src/auton/agents/: __init__.py  orchestrator.py  prompts.py  registry.py  roles.py  tools.py
src/auton/blockchain/: __init__.py  client.py  tools.py
src/auton/bridge/: __init__.py  manager.py  playwright.py
src/core/: executor.ts
src/fast_mcp_agent/: __init__.py  app.py  models.py
src/mcp/: client.ts  index.ts  transport.ts  transportinterface.ts  transportsse.ts  transportstdio.ts  types.ts
src/types/: agent.ts  ai.ts  aicompletion.ts  aimessages.ts
(+130 files in other folders)
